change to html and folder

--- a/html.html
+++ b/html.html
@@ -56,18 +56,23 @@ at
 </nav>
 <h3>IMAGES</h3>
 <p>svg&gt;png&lt;jpeg</p>
-<img src='./images/600.png'
+<img src='./src/600.png'
 		 alt=gitlogo width='300'/>
 <p>FigCaption</p>
 <figure>
-	<img src='./images/1200.jpeg' />
+	<img src='./src/1200.jpeg' />
 	<figcaption>GITHUB LOGO</figcaption>
 </figure>
 <p>Width</p>
 <picture>
-	<source media='(min-width:1200px)' srcset='./images/1200.jpeg'>
-	<source media='(min-width:600px)' srcset='./images/600.png'>
-	<img src='./images/300.jpeg' alt="git" width='600' />
+	<source media='(min-width:1200px)' srcset='./src/1200.jpeg'>
+	<source media='(min-width:600px)' srcset='./src/600.png'>
+	<img src='./src/300.jpeg' alt="git" width='600' />
 </picture>
 <h3>AUDIO</h3>
+<audio controls src=./src/audio.mp3>Hello</audio>
+<h3>VIDEO</h3>
+<video>
+	<source src=./src/video.mp4 type='video/mp4'>
+</video>
 
