Html document finished... i think

--- a/html.html
+++ b/html.html
@@ -99,9 +99,58 @@
 	<h3>GLOBAL ATTRIBUTES</h3> 
 		<p id="aid">Id = nobody like me</p>
 		<p class="group">Class= for groups</p>
+	
+	<h3>TABLES</h3>
+		<p>Only for tabular info</p>
+		<table>	
+			<tr>
+				<th>HTML</th>
+				<th>CCS</th>
+			</tr>
+			<tr>
+				<td>Structure</td>
+				<td>Style</td>
+			</tr>
+		</table>
+	<h3>INPUT</h3>
+		<input type='password' /><br />
+		<input type='search' placeholder='search' /><br />
+		<input type='phone' /><br />
+		<input type='date' /><br />   
+		<input type='color' /><br />
+		<input type='file' accept='image/*' multiple /><br />
+		<input type='checkbox' value='true' /><br />
+		<textarea></textarea><br />
+	<h3>CHECKBOX</h3>
+		<fieldset>
+			<legend>Checkbox 1</legend>
+			<input id='one' type='checkbox' value='one'>	
+			<label for='one'>One</label>
+			<input id='two' type='checkbox' value='two'>
+			<label for='two'>Two</label>
+			<input id='three' type='checkbox' value='three'>
+			<label for='three'>Three</label>
+		</fieldset>
+		<fieldset>
+			<legend>Checkbox 2</legend>
+			<input id='uno' type='radio' value='uno' name='list'>	
+			<label for='uno'>One</label>
+			<input id='dos' type='radio' value='dos' name='list'>
+			<label for='dos'>Two</label>
+			<input id='tres' type='radio' value='tres' name='list'>
+			<label for='tres'>Three</label>
+		</fieldset>
+	<h3>FORMS</h3>
+		<form action='' method='POST'>
+			<label>
+				Email
+				<input name='email' type='email'>
+			</label>
+			<button>Send</button>
+		</form>
 </main> 
+<footer>
+	<small>Created by Wilman Prieto</small>
+</footer>
 </body>
 </html>
-
-
-
