--- a/pages/structure/html.html
+++ b/pages/structure/html.html
@@ -1,30 +1,33 @@
 <!doctype html>
-<html lang="en" dit='ltr'>
-<head>
-    <meta charset="UTF-8">
+<html lang="en" dit='ltr' />
+<head />
+    <meta charset="UTF-8" />
 		<title>HTML Documentation</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name='description' content='Example page'>
-    
-		<link rel='icon' href='' >
-		<link rel='stylesheet' href=''>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name='description' content='Example page' />
+		<link rel='icon' href=''  />
+		<link rel='stylesheet' 
+					href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'
+					/>
+		<link rel='stylesheet' href='./css.css' />
 		<script src='/'></script>
 </head>
 <body>
 <nav></nav>
 <header>	
-	<h1 title ="TITLE" >&copy;HTML&nbsp;DOCUMENTATION</h1>
+	<h1 id='title' title ="TITLE" >&copy;HTML&nbsp;DOCUMENTATION</h1>
 	<h2>Html gives structure to web pages</h2>
 </header>
 <main>
 	<h3 id='types'>TYPES OF TEXT</h3>
+		<ul class='cool'>
 		<li><b>Bold</b></li>
 	  <li><strong>Strong</strong></li>
 		<li><em>Emphasis</em></li> 
 		<li><i>Alternative</i></li>
 		<li><small>Small</small></li>
-
+		</ul>
   <h3>TYPES OF LISTS</h3>
 		<ul><li>Unordered list</li></ul>
 		<ol><li>Ordered List</li></ol>
@@ -71,7 +74,7 @@
 			<img src='./src/1200.jpeg' />
 			<figcaption>GITHUB LOGO</figcaption>
 		</figure>
-		<b>Width</b>
+		<b>Width</b><br />
 		<picture>
 			<source media='(min-width:1200px)' srcset='./src/1200.jpeg'>
 			<source media='(min-width:600px)' srcset='./src/600.png'>
@@ -89,10 +92,8 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Irj9gX9zyMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 	<h3>DIVS AND SPAN</h3>
-		<div>I'm a div</div>
-		<div>I'm a div</div>
-		<span>I'm a span</span>
-		<div>I like the song 
+		<div class='divs'>I'm a div, <span>I'm a span</span></div>
+		<div>Span like's the song 
 			<span lang="es">Despasito</span>
 		</div>
 
