changing html page for a new one with true examples (still working in)

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 	<link rel='icon' href=''  />
 	<link rel='stylesheet' 
 	href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'/>
-	<link rel='stylesheet' href='./css.css' />
+	<link rel='stylesheet' href='style.css' />
 	<script src=""></script>
 </head>
 <body>
@@ -18,11 +18,11 @@
 		<h1 id="title">CODE&nbsp;DOCUMENTATION</h1>
 	</header>
 	<nav role='navigation' aria-label="menu">
-        <a href="./html.html">HTML</a>
-        <a href="./css.html">CSS</a>
-        <a href="./git.html">GIT</a>
-        <a href="./terminal.html">TERMINAL</a>
-        <a href="./nvim.html">NVIM</a>
+        <a href="/pages/structure/html.html">HTML</a>
+        <a href="/pages/structure/css.html">CSS</a>
+        <a href="/pages/structure/git.html">GIT</a>
+        <a href="/pages/structure/terminal.html">TERMINAL</a>
+        <a href="/pages/structure/nvim.html">NVIM</a>
     </nav>
 </body>
 </html>
