--- a/pages/structure/newhtml.html
+++ b/pages/structure/newhtml.html
@@ -283,24 +283,153 @@
         </table>
     </section>
     <section id="images">
+        <hr /><h3>Images</h3><hr />
+        <table>
+            <tr>
+                <th>Way to show</th>
+                <th>Code</th>
+            </tr>
+            <tr>
+                <td>
+                    <b>Normal</b><br />
+                    <img src="/pages/src/600.png" alt=gitlogo width='300'/>
+                </td>
+                <td>
+                    <code>
+                        &lt;img src="/file" alt=ghlogo 
+                        width="300"&gt;<br />
+                    </code>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <figure>
+                        <b>Figcaption</b><br />
+                        <img src="/pages/src/600.png" width='300' />
+                        <figcaption>GitHub</figcaption>
+                    </figure>
+                </td>
+                <td>
+                    <code>
+                        &lt;figure&gt;<br />
+                        &lt;img src="/file"&gt;<br />
+                        &lt;figcaption&gt;GitHub&lt;/figcaption&gt;<br />
+                        &lt;/figure&gt;<br />
+                    </code>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>Width way</b><br />
+                    <picture>
+                        <source media="(min-width:1200px)" srcset="/pages/src/1200.jpeg">
+                        <source media="(min-width:600px)" srcset="/pages/src/600.png">
+                        <img src="/pages/src/300.jpeg" alt="git" width="300" />
+                    </picture>
+                </td>
+                <td>
+                    <code>
+                        &lt;picture&gt;<br />
+                        &lt;source media="(min-width:1200px)" 
+                        srcset="1200.jpg"&gt;<br />
+                        &lt;source media="(min-width:600px)" 
+                        srcset="600.jpg"&gt;<br />
+                        &lt;img src="300.jpg" width="300"&gt;<br />
+                        &lt;/picture&gt;
+                    </code>
+                </td>
+            </tr>
+        </table>
     </section>
     <section id="audio">
+        <hr /><h3>Audio</h3><hr />
+		<audio controls src=./src/audio.mp3>Hello</audio>    
     </section>
     <section id="video">
+        <hr /><h3>Video</h3><hr />
+	<video>
+		<source src='./src/video.mp4' type='video/mp4' > 
+	</video>
     </section>
     <section id="iframe">
+        <hr /><h3>Iframe</h3><hr />
+        <iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/Irj9gX9zyMM"
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
     <section id="divs-span">
+        <hr /><h3>Divs-Span</h3><hr />
+		<div class='divs'>I'm a div, <span>I'm a span</span></div>
+		<div>Span like's the song 
+			<span lang="es">Despasito</span>
+		</div>
     </section>
     <section id="attributes">
+        <hr /><h3>Global-Attributes</h3><hr />
+        <p id="aid">Id = nobody like me</p>
+		<p class="group">Class= for groups</p>
     </section>
     <section id="tables">
+        <hr /><h3>Tables</h3><hr />
+        <p>Only for tabular info</p>
+		<table>	
+			<tr>
+				<th>HTML</th>
+				<th>CCS</th>
+			</tr>
+			<tr>
+				<td>Structure</td>
+				<td>Style</td>
+			</tr>
+		</table>
     </section>
     <section id="input">
+        <hr /><h3>Input</h3><hr />
+        <input type='password' /><br />
+		<input type='search' placeholder='search' /><br />
+		<input type='phone' /><br />
+		<input type='date' /><br />   
+		<input type='color' /><br />
+		<input type='file' accept='image/*' multiple /><br />
+		<input type='checkbox' value='true' /><br />
+		<textarea></textarea><br />
     </section>
     <section id="checkbox">
+        <hr /><h3>Checkbox</h3><hr />
+        <fieldset>
+			<legend>Checkbox 1</legend>
+			<input id='one' type='checkbox' value='one'>	
+			<label for='one'>One</label>
+			<input id='two' type='checkbox' value='two'>
+			<label for='two'>Two</label>
+			<input id='three' type='checkbox' value='three'>
+			<label for='three'>Three</label>
+		</fieldset>
+		<fieldset>
+			<legend>Checkbox 2</legend>
+			<input id='uno' type='radio' value='uno' name='list'>	
+			<label for='uno'>One</label>
+			<input id='dos' type='radio' value='dos' name='list'>
+			<label for='dos'>Two</label>
+			<input id='tres' type='radio' value='tres' name='list'>
+			<label for='tres'>Three</label>
+		</fieldset>
     </section>
     <section id="forms">
+        <hr /><h3>Forms</h3><hr />
+        <form action='' method='POST'>
+			<label>
+				Email
+				<input name='email' type='email'>
+			</label>
+			<button>Send</button>
+		</form>
+    </section>
+    <section id="footer">
+        <hr /><h3>Footer</h3><hr />
+        <footer>
+            <small>Created by Wilman Prieto</small>
+        </footer>
     </section>
 </body>
 </html>
