Changes on main and stylesheet

--- a/main/main.html
+++ b/main/main.html
@@ -6,10 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="description" content="Example page" />
-	<link rel='icon' href=''  />
+	<link rel="icon" href=""  />
 	<link rel='stylesheet' 
 	href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'/>
-	<link rel='stylesheet' href='style.css' />
+	<link rel="stylesheet" href="style.css" />
 	<script src=""></script>
 </head>
 <body>
@@ -18,11 +18,15 @@
 		<h1 id="title">CODE&nbsp;DOCUMENTATION</h1>
 	</header>
 	<nav role='navigation' aria-label="menu">
-        <a href="/pages/structure/html.html">HTML</a>
-        <a href="/pages/structure/css.html">CSS</a>
-        <a href="/pages/structure/git.html">GIT</a>
-        <a href="/pages/structure/terminal.html">TERMINAL</a>
-        <a href="/pages/structure/nvim.html">NVIM</a>
+        <a href="../pages/structure/html.html"
+	    class="web">HTML</a>
+        <a href="../pages/structure/css.html"
+		class="web">CSS</a>
+        <a href="../pages/structure/git-github.html"
+		>GIT</a>
+        <a href="../pages/structure/terminal.html">TERMINAL</a>
+        <a href="../pages/structure/nvim.html" 
+		id="editor">NVIM</a>
     </nav>
 </body>
 </html>
