html and css changes 2

--- a/main/main.html
+++ b/main/main.html
@@ -21,7 +21,7 @@
         <a href="../pages/structure/css.html" class="web">CSS</a>
         <a href="../pages/structure/git-github.html">GIT</a>
         <a href="../pages/structure/terminal.html">TERMINAL</a>
-        <a href="../pages/structure/nvim.html" id="editor">NVIM</a>
+        <a href="../pages/structure/nvim.html">NVIM</a>
     </nav>
 </body>
 </html>
