Terminal files changes

--- a/pages/structure/terminal.html
+++ b/pages/structure/terminal.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Linux Terminal review" />
     <title>Linux Terminal</title>
     <link rel="icon" href="" />
-    <link rel="stylesheet" href="./pages/styles/terminal.css" />
+    <link rel="stylesheet" href="../styles/terminal.css" />
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <h1 id="title">Linux Terminal</h1>
     </header>
     <section id="movement">
-        <hr /><h3>Movement</h3><hr />
+        <hr /><h2>Movement</h2><hr />
         <table>
             <tr>
                 <th>Description</th>
@@ -36,7 +36,7 @@
         </table>
     </section>
     <section id="returns">
-        <hr /><h3>Returns</h3><hr />
+        <hr /><h2>Returns</h2><hr />
         <table>
             <tr>
                 <th>Description</th>
@@ -85,7 +85,7 @@
         </table>
     </section>
     <section id="create">
-        <hr /><h3>Create</h3><hr />
+        <hr /><h2>Create</h2><hr />
         <table>
             <tr>
                 <th>Description</th>
