Changes on nvim files and some css files

--- a/pages/structure/nvim.html
+++ b/pages/structure/nvim.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Nvim review" />
     <title>Nvim</title>
     <link rel="icon" href="" />
-    <link rel="stylesheet" href="./pages/styles/nvim.css" />
+    <link rel="stylesheet" href="../styles/nvim.css" />
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <h1 id="title">Nvim</h1>
     </header>
     <section id="movement">
-        <hr /><h3>Movement</h3><hr />
+        <hr /><h2>Movement</h2><hr />
         <table>
             <tr>
                 <th>Description</th>
@@ -88,7 +88,7 @@
         </table>
     </section>
     <section id="insert">
-        <hr /><h3>Insert</h3><hr />
+        <hr /><h2>Insert</h3><hr />
         <table>
             <tr>
                 <th>Description</th>
@@ -137,7 +137,7 @@
         </table>
     </section>
     <section id="insert">
-        <hr /><h3>Insert</h3><hr />
+        <hr /><h2>Insert</h2><hr />
         <table>
             <tr>
                 <th>Description</th>
