--- a/pages/structure/vim.html
+++ b/pages/structure/vim.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Nvim review" />
-    <title>Nvim</title>
+    <title>Vim</title>
     <link rel="icon" href="" />
-    <link rel="stylesheet" href="../styles/nvim.css" />
+    <link rel="stylesheet" href="../styles/vim.css" />
 </head>
 
 <body>
     <header>
-        <h1 id="title">Nvim</h1>
+        <h1 id="title">Vim</h1>
     </header>
     <section id="movement">
         <hr /><h2>Movement</h2><hr />
