changes on html nav bar and main file

--- a/pages/structure/html.html
+++ b/pages/structure/html.html
@@ -13,25 +13,26 @@
     <header>
         <h1 id="title">HTML</h1>
     </header>
-    <nav>
+    <nav class="menu">
         <ul>
-          <li><a href="#types">1</a></li>
-          <li><a href="#lists">2</a></li>
-          <li><a href="#format">3</a></li>
-          <li><a href="#quotes">4</a></li>
-          <li><a href="#time">5</a></li>
-          <li><a href="#links">6</a></li>
-          <li><a href="#navegation">7</a></li>
-          <li><a href="#images">8</a></li>
-          <li><a href="#audio">9</a></li>
-          <li><a href="#video">10</a></li>
-          <li><a href="#divs-span">11</a></li>
-          <li><a href="#attributes">12</a></li>
-          <li><a href="#tables">13</a></li>
-          <li><a href="#input">14</a></li>
-          <li><a href="#checkboxes">15</a></li>
-          <li><a href="#forms">16</a></li>
-          <li><a href="#footer">17</a></li>
+          <li><a href="#types">Types</a></li>
+          <li><a href="#lists">Lists</a></li>
+          <li><a href="#format">Formats</a></li>
+          <li><a href="#quotes">Quotes</a></li>
+          <li><a href="#time">Time</a></li>
+          <li><a href="#links">Links</a></li>
+          <li><a href="#navegation">Navegation</a></li>
+          <li><a href="#images">Images</a></li>
+          <li><a href="#audio">Audio</a></li>
+          <li><a href="#video">Video</a></li>
+          <li><a href="#divs-span">Divs</a></li>
+          <li><a href="#divs-span">Span</a></li>
+          <li><a href="#attributes">Attributes</a></li>
+          <li><a href="#tables">Tables</a></li>
+          <li><a href="#input">Input</a></li>
+          <li><a href="#checkboxes">Checkboxes</a></li>
+          <li><a href="#forms">Forms</a></li>
+          <li><a href="#footer">Footer</a></li>
         </ul>
       </nav>
     <section id="types" class="sections">
