css page changes

--- a/pages/structure/css.html
+++ b/pages/structure/css.html
@@ -8,7 +8,9 @@
     <title>CSS Attributes</title>
 </head>
 <body>
-	<h1>CSS Attributes</h1>
+    <header>
+        <h1>CSS Attributes</h1>
+    </header>
 	<table>
 		<tr>
 			<td>color</td>
