Files names adjusted

--- a/main/main.html
+++ b/main/main.html
@@ -19,7 +19,7 @@
 	<nav class="menu" role="navigation" aria-label="menu">
         <a href="../pages/structure/html.html" class="web">HTML</a>
         <a href="../pages/structure/css.html" class="web">CSS</a>
-        <a href="../pages/structure/git-github.html">GIT</a>
+        <a href="../pages/structure/git.html">GIT</a>
         <a href="../pages/structure/terminal.html">TERMINAL</a>
         <a href="../pages/structure/vim.html">VIM</a>
     </nav>
