--- a/pages/structure/git.html
+++ b/pages/structure/git.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Git-Github review" />
-    <title>Git-Github</title>
-    <link rel="stylesheet" href="../styles/git-github.css" />
+    <title>Git</title>
+    <link rel="stylesheet" href="../styles/git.css" />
   </head>
 
   <body>
     <header>
-      <h1 id="title">Git-Github</h1>
+      <h1 id="title">Git</h1>
     </header>
 
     <main>
