--- a/pages/structure/vim.html
+++ b/pages/structure/vim.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Nvim review" />
     <title>Vim</title>
-    <link rel="icon" href="" />
+    <link rel="icon" href="../src/vim.jpeg" />
     <link rel="stylesheet" href="../styles/vim.css" />
 </head>
 
