--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Example page" />
 	<link rel="icon" href="route"  alt="icon"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="main.css" />
 	<script src="file.js" type="text/javascript"></script>
 </head>
 <body>
@@ -17,11 +17,11 @@
 		<h1 id="title">CODE&nbsp;DOCUMENTATION</h1>
 	</header>
 	<nav class="menu" role="navigation" aria-label="menu">
-        <a href="../pages/structure/html.html" class="web">HTML</a>
-        <a href="../pages/structure/css.html" class="web">CSS</a>
-        <a href="../pages/structure/git.html">GIT</a>
-        <a href="../pages/structure/terminal.html">TERMINAL</a>
-        <a href="../pages/structure/vim.html">VIM</a>
+        <a href="./pages/structure/html.html" class="web">HTML</a>
+        <a href="./pages/structure/css.html" class="web">CSS</a>
+        <a href="./pages/structure/git.html">GIT</a>
+        <a href="./pages/structure/terminal.html">TERMINAL</a>
+        <a href="./pages/structure/vim.html">VIM</a>
     </nav>
 </body>
 </html>
