--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Example page" />
 	<link rel="icon" href="route"  alt="icon"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
-	<link rel="stylesheet" href="main.css" />
+	<link rel="stylesheet" href="index.css" />
 	<script src="file.js" type="text/javascript"></script>
 </head>
 <body>
